editors/tree-sitter-teyru/grammar.js
    source_file: $ => seq(
      optional($.package_declaration),
      repeat($.import_declaration),
      repeat($._member),
    ),

    package_declaration: $ => seq(
      'package',
      field('name', $.scoped_identifier),
    ),

    import_declaration: $ => seq(
      'import',
      choice(
        // `import module a.b` and `import module a.b.*` (JEP 511): parsed and
        // ignored, there is no module system at run time
        seq('module', field('name', $.import_name)),
        seq(optional('static'), field('name', $.import_name)),
      ),
    ),

    // a dotted name grows to the right: at a `.` the parser keeps reading
    // parts instead of ending the name
    scoped_identifier: $ => prec.right(seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
    )),

    // the name of an import is its own rule so that `a.b.C` and the `a.b.*`
    // wildcard share one repetition: at a `.` the parser then never has to
    // choose between carrying on with the name and starting the `.*`.
    import_name: $ => seq(
      $.identifier,
      repeat(seq('.', choice($.identifier, '*'))),
    ),

    // ---------------------------------------------------------------- types

    _type: $ => choice(
      $.primitive_type,
      $.generic_type,
      $.array_type,
      $.scoped_identifier,
    ),

    primitive_type: _ => choice(...PRIMITIVE_TYPES),

    // a type that names a class: what may follow `instanceof`, or open a
    // record pattern.  `x instanceof int` is not a thing, and leaving
    // primitives out is what keeps `x instanceof Foo` from swallowing the
    // `int` of the next statement.
    array_type: $ => prec.right(seq(
      field('element', choice($.primitive_type, $.generic_type, $.scoped_identifier)),
      repeat1(seq('[', ']')),
    )),

    class_declaration: $ => prec.right(seq(
      repeat($.annotation),
      optional($.modifiers),
      'class',
      field('name', $.identifier),
      optional($.type_parameters),
      optional($.superclass),
      optional($.super_interfaces),
      optional($.permits_clause),
      optional($.class_body),
    )),

    interface_declaration: $ => prec.right(seq(
      repeat($.annotation),
      optional($.modifiers),
      'interface',
      field('name', $.identifier),
      optional($.type_parameters),
      optional($.extends_interfaces),
      optional($.permits_clause),
      optional($.class_body),
    )),

    enum_declaration: $ => prec.right(seq(
      repeat($.annotation),
      optional($.modifiers),
      'enum',
      field('name', $.identifier),
      optional($.super_interfaces),
      optional($.enum_body),
    )),

    record_declaration: $ => prec.right(seq(
      repeat($.annotation),
      optional($.modifiers),
      'record',
      field('name', $.identifier),
      optional($.type_parameters),
      field('parameters', $.formal_parameters),
      optional($.super_interfaces),
      optional($.record_body),
    )),

    annotation_type_declaration: $ => prec.right(seq(
      repeat($.annotation),
      optional($.modifiers),
      '@',
      'interface',
      field('name', $.identifier),
      optional($.annotation_type_body),
    )),

    modifiers: $ => repeat1(choice(...MODIFIERS)),

    class_body: $ => seq('{', repeat($._member), '}'),

    record_body: $ => seq('{', repeat(choice($._member, $.compact_constructor_declaration)), '}'),

    annotation_type_body: $ => seq(
      '{',
      repeat(choice($._member, $.annotation_method_declaration)),
      '}',
    ),

    enum_body: $ => seq(
      '{',
      optional($.enum_constant_list),
      optional(':'),
      repeat($._member),
      '}',
    ),

    enum_constant_list: $ => prec.right(seq(
      $.enum_constant,
      repeat(seq(',', $.enum_constant)),
      optional(','),
    )),

    // `A(...)`: inside an enum body this is a constant, not a constructor
    enum_constant: $ => prec.right(1, seq(
      repeat($.annotation),
      field('name', $.identifier),
      optional(field('arguments', $.argument_list)),
      optional($.class_body),
    )),

    _member: $ => choice(
      $._type_declaration,
      $.field_declaration,
      // a property: the `{ get ... set ... }` that follows a field
      // declaration.  It is a member of its own so that a field declaration
      // is never left guessing whether a `{` starts an accessor block or an
      // instance initializer; see the conflict below.
      $.accessor_block,
      $.method_declaration,
      $.constructor_declaration,
      $.static_initializer,
      $.instance_initializer,
    ),

    static_initializer: $ => seq('static', $.block),

    instance_initializer: $ => $.block,

    field_declaration: $ => seq(
      repeat($.annotation),
      optional($.modifiers),
      field('type', $._type),
      commaSep1(field('declarator', $.variable_declarator)),
    ),

    variable_declarator: $ => seq(
      field('name', $.identifier),
      repeat(seq('[', ']')),
      optional(seq('=', field('value', choice($.array_initializer, $._expression)))),
    ),

    method_declaration: $ => prec.right(seq(...methodShape($))),

    // an element of an `@interface` body that carries a `default` value: the
    // same shape as a method, plus the clause.  `default` only exists there
    // (`parseMemberAfterMods` checks the enclosing declaration kind first), so
    // keeping the clause out of `method_declaration` is what makes
    // `default String kind() { ... }` in an ordinary interface read as a
    // method rather than as the tail of the one before it
    annotation_method_declaration: $ => prec.right(seq(
      repeat($.annotation),
      optional($.modifiers),
      optional($.type_parameters),
      field('type', $._type),
      field('name', $.identifier),
      field('parameters', $.formal_parameters),
      repeat(seq('[', ']')),
      optional($.throws_clause),
      'default',
      field('value', $._element_value),
      optional($.block),
    )),

    // the body is optional: `native` constructors have none, and whether the
    // name really is the class name is a semantic check, not a syntactic one
    // the body is optional: `native` constructors have none, and whether the
    // name really is the class name is a semantic check, not a syntactic one
    constructor_declaration: $ => prec.right(seq(
      repeat($.annotation),
      optional($.modifiers),
      optional($.type_parameters),
      field('name', $.identifier),
      field('parameters', $.formal_parameters),
      optional($.throws_clause),
      optional($.block),
    )),

    // `record Point(int x, int y) { public Point { ... } }`
    throws_clause: $ => seq('throws', commaSep1($._type)),

    formal_parameters: $ => seq('(', optional(commaSep1($.formal_parameter)), ')'),

    formal_parameter: $ => seq(
      repeat($.annotation),
      optional($.modifiers),
      field('type', $._type),
      optional('...'),
      field('name', choice($.identifier, 'this')),
      repeat(seq('[', ']')),
    ),

    // ---------------------------------------------------------- statements

    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.block,
      $.local_variable_declaration,
      $.expression_statement,
      $.if_statement,
      $.while_statement,
      $.do_statement,
      $.for_statement,
      $.enhanced_for_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.throw_statement,
      $.assert_statement,
      $.synchronized_statement,
      $.try_statement,
      $._type_declaration,
      $.labeled_statement,
    ),

    // `yield` is only legal in a switch case body, which is also the only
    // place the compiler's lookahead check (`yield = x` is an assignment to a
    // variable named `yield`) admits the keyword
    local_variable_declaration: $ => prec.dynamic(1, seq(
      repeat($.annotation),
      optional($.modifiers),
      field('type', $._type),
      commaSep1(field('declarator', $.variable_declarator)),
    )),

    // a statement that is just an expression; `switch` reaches this rule
    // through `_expression`
    expression_statement: $ => choice(
      $.assignment_expression,
      $.lambda_expression,
      $.ternary_expression,
      $.binary_expression,
      $.instanceof_expression,
      $.unary_expression,
      $.update_expression,
      $.cast_expression,
      $.switch_construct,
      $._postfix_expression,
    ),

    enhanced_for_statement: $ => prec.right(1, seq(
      'for',
      '(',
      field('type', $._type),
      field('name', $.identifier),
      ':',
      field('value', $._expression),
      ')',
      field('body', $._statement),
    )),

    return_statement: $ => prec.right(seq('return', optional(field('value', $._expression)))),

    throw_statement: $ => prec.right(seq('throw', field('value', $._expression))),

    _expression: $ => choice(
      $.lambda_expression,
      $.assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.instanceof_expression,
      $.unary_expression,
      $.update_expression,
      $.cast_expression,
      $.switch_construct,
      $._postfix_expression,
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', $._lhs),
      field('operator', choice(...ASSIGN_OPERATORS)),
      field('right', $._expression),
    )),

    binary_expression: $ => choice(...BINARY_OPERATORS.map(([operator, precedence]) =>
      prec.left(precedence, seq(
        field('left', $._expression),
        field('operator', operator),
        field('right', $._expression),
      )))),

    // `x instanceof T`, `x instanceof T t`, `x instanceof T(...)`
    update_expression: $ => choice(
      prec.left(PREC.UNARY, seq(
        field('operator', choice('++', '--')),
        field('operand', $._unary_expression),
      )),
      prec.left(PREC.POSTFIX, seq(
        field('operand', $._postfix_expression),
        field('operator', choice('++', '--')),
      )),
    ),

    // like `tryCast`: after a cast to a *primitive* type the operand is read
    // with no lookahead check, so `(byte) -128` is legal; after a cast to a
    // reference type the operand may not start with `+` or `-`
    _unary_expression: $ => choice(
      $.unary_expression,
      $.update_expression,
      $.cast_expression,
      $._postfix_expression,
    ),

    // like `tryCast`, the operand of a cast may not start with `+` or `-`
    _postfix_expression: $ => choice(
      $._primary_expression,
      $.field_access,
      $.method_invocation,
      $.array_access,
      $.method_reference,
      $.class_literal,
      $.qualified_this,
      $.qualified_super_call,
      $.inner_class_creation,
    ),

    this_expression: _ => 'this',

    field_access: $ => prec.right(PREC.POSTFIX, seq(
      field('object', $._postfix_expression),
      '.',
      field('field', $.identifier),
    )),

    method_invocation: $ => prec(PREC.POSTFIX, choice(
      seq(field('name', $.identifier), field('arguments', $.argument_list)),
      seq(
        field('object', $._postfix_expression),
        '.',
        optional(field('type_arguments', $.type_arguments)),
        field('name', $.identifier),
        field('arguments', $.argument_list),
      ),
    )),

    inner_class_creation: $ => prec.right(PREC.POSTFIX, seq(
      field('object', $._postfix_expression),
      '.',
      'new',
      field('name', $.identifier),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    // `this(...)` / `super(...)`: the explicit constructor invocation that
    // opens a constructor body
    constructor_invocation: $ => prec(PREC.UNARY, seq(
      field('name', choice('this', 'super')),
      field('arguments', $.argument_list),
    )),

    object_creation_expression: $ => prec.right(PREC.UNARY, seq(
      'new',
      field('type', choice($.generic_type, $.scoped_identifier)),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    // `new int[3][]` keeps growing to the right, so a `[` right after the
    // creation belongs to the creation and not to an array access on it
    argument_list: $ => prec(1, seq('(', optional(commaSep1($._expression)), ')')),

    _lhs: $ => choice($.identifier, $.field_access, $.array_access),

    // ------------------------------------------------------------ literals

    decimal_integer_literal: _ => /[0-9][0-9_]*[lL]?/,
    string_literal: _ => token(seq(
      '"',
      repeat(choice(/[^"\\\n\r]/, /\\([^u\n\r]|u[0-9a-fA-F]{4})/)),
      '"',
    )),
    // a text block runs to the first `"""`, so the body may hold single
    // quotes and pairs of quotes but never three in a row
    annotation: $ => seq(
      '@',
      field('name', $.scoped_identifier),
      optional(field('arguments', $.annotation_argument_list)),
    ),

    annotation_argument_list: $ => seq(
      '(',
      optional(commaSep1($.annotation_argument)),
      ')',
    ),

    annotation_argument: $ => choice(
      $._element_value,
      seq(field('name', $.identifier), '=', field('value', $._element_value)),
    ),

    // `parseAnnoValue`: literals, `{...}` arrays, `-lit`, `Name.class` and a
    // dotted name (an enum constant such as `AccessLevel.NONE`), which the
    // compiler reads as a select chain and so is a field access here
    _element_value: $ => choice(
      $._literal,
      $.annotation,
      $.element_value_array_initializer,
      $.field_access,
      $.class_literal,
      seq('-', choice($.decimal_integer_literal, $.decimal_floating_point_literal)),
    ),

    // the elements are element values again, so a nested annotation is allowed
    // (`@Wraps({@Tag("x")})`) where an ordinary array initializer would need an
    // expression
    element_value_array_initializer: $ => seq(
      '{',
      optional(seq(commaSep1($._element_value), optional(','))),
      '}',
    ),

    // -------------------------------------------------------------- tokens

    identifier: _ => /[a-zA-Z_$\u00A1-\uFFFF][a-zA-Z0-9_$\u00A1-\uFFFF]*/,

    line_comment: _ => token(seq('//', /[^\n\r]*/)),

    block_comment: _ => token(seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/')),
  },
});

function commaSep1(rule, separator = ',') {
  return seq(rule, repeat(seq(separator, rule)));
}
