editors/tree-sitter-teyru/test/corpus/enums.txt
==================
a simple enum
==================

enum Color {
  RED, GREEN, BLUE
}

---

(source_file
  (enum_declaration
    (identifier)
    (enum_body
      (enum_constant_list
        (enum_constant
          (identifier))
        (enum_constant
          (identifier))
        (enum_constant
          (identifier))))))

==================
an enum with a body per constant, ended by a colon
==================

enum Op {
  ADD {
    public int apply(int a, int b) {
      return a + b
    }
  },
  MUL {
    public int apply(int a, int b) {
      return a * b
    }
  }

  :
  public abstract int apply(int a, int b)
}

---

(source_file
  (enum_declaration
    (identifier)
    (enum_body
      (enum_constant_list
        (enum_constant
          (identifier)
          (class_body
            (method_declaration
              (modifiers)
              (primitive_type)
              (identifier)
              (formal_parameters
                (formal_parameter
                  (primitive_type)
                  (identifier))
                (formal_parameter
                  (primitive_type)
                  (identifier)))
              (block
                (return_statement
                  (binary_expression
                    (identifier)
                    (identifier)))))))
        (enum_constant
          (identifier)
          (class_body
            (method_declaration
              (modifiers)
              (primitive_type)
              (identifier)
              (formal_parameters
                (formal_parameter
                  (primitive_type)
                  (identifier))
                (formal_parameter
                  (primitive_type)
                  (identifier)))
              (block
                (return_statement
                  (binary_expression
                    (identifier)
                    (identifier))))))))
      (method_declaration
        (modifiers)
        (primitive_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (primitive_type)
            (identifier))
          (formal_parameter
            (primitive_type)
            (identifier)))))))
